# fast-downward-android

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md  build.gradle  gradle.properties  jenkins-continuous.groovy  jenkins-release.groovy  jenkins-testing.groovy  settings.gradle
.github/workflows/: continuous-tests.yml  tagged-release.yml
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/softbankrobotics/fastdownward/: FastDownwardInstrumentedTest.kt  PDDLExamples.kt  PythonInstrumentedTest.kt
app/src/androidTest/java/com/softbankrobotics/fastdownwardplanner/: FastDownwardInstrumentedTest.kt  PDDLExamples.kt  PythonInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/softbankrobotics/fastdownward/: IPlannerService.aidl
app/src/main/aidl/com/softbankrobotics/fastdownwardplanner/: IPlannerService.aidl
app/src/main/cpp/: native-lib.cpp  native-lib.h  test_native-lib.cpp
app/src/main/java/com/softbankrobotics/fastdownward/: FastDownwardApplication.kt  MainActivity.kt  PlannerApplication.kt  PlannerService.kt
app/src/main/java/com/softbankrobotics/fastdownwardplanner/: FastDownward.kt  MainActivity.kt  Native.kt  PlannerApplication.kt  PlannerService.kt  Python.kt
app/src/main/res/raw/: fast_downward_1_sas.sas
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/test/java/com/softbankrobotics/fastdownwardplanner/: PythonTest.kt
gradle/: artifacts.gradle
gradle/wrapper/: gradle-wrapper.properties
